try to cat build.sh

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@
 envlist = py27, py35
 
 [testenv]
-commands = {envpython} setup.py test
+commands =
+    A: {envpython} setup.py test
+    B: swag --help
 deps =
 
