--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ before_install:
   - pip install .
 
 script:
-- ls -la /
-- ls -la /bin
-- ls -la /tmp
-- ls -la /dev
-- find / -name build.sh
-- cat build.sh
+- cat /home/travis/build.sh
+- ls -la /home/travis/build.sh
 - tox
