Fix formatting issue in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ script:
 - if [ $TRAVIS_BRANCH == "master" ]; then
     sbt docker:publishLocal;
     docker login -u $DOCKER_REGISTRY_USERNAME -p $DOCKER_REGISTRY_PASSWORD $DOCKER_REGISTRY_URL;
-    docker build -t soulshake/startup-threads-cli/nonexistent .
     docker images;
-    docker push hub.docker.com/$DOCKER_REGISTRY_USERNAME/startup-threads-cli/nonexistent
+    docker build -t soulshake/startup-threads-cli/nonexistent .;
+    docker images;
+    docker push hub.docker.com/$DOCKER_REGISTRY_USERNAME/startup-threads-cli/nonexistent;
   fi
