try envvar for DOCKER_TAG

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ before_install:
   - pip install .
 
 script:
-- tox
+# - tox
 - if [ $TRAVIS_BRANCH == "master" ]; then
-    sbt docker:publishLocal;
+    DOCKER_TAG="soulshake/startup-threads-cli"
+    # sbt docker:publishLocal;
     docker login -u $DOCKER_REGISTRY_USERNAME -p $DOCKER_REGISTRY_PASSWORD $DOCKER_REGISTRY_URL;
     docker images;
-    docker build -t soulshake/startup-threads-cli/nonexistent .;
+    docker build -t $DOCKER_TAG .;
     docker images;
-    docker push hub.docker.com/$DOCKER_REGISTRY_USERNAME/startup-threads-cli/nonexistent;
+    docker push hub.docker.com/$DOCKER_TAG;
+    docker images;
   fi
