--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-# language: python
 sudo: true
+dist: trusty
 language: python
 
 python: 3.6
@@ -9,10 +9,7 @@ before_install:
   - pip install .
 
 script:
-# - tox
 - if [ $TRAVIS_BRANCH == "master" ]; then
-    DOCKER_TAG="soulshake/startup-threads-cli"
-    # sbt docker:publishLocal;
     docker login -u $DOCKER_REGISTRY_USERNAME -p $DOCKER_REGISTRY_PASSWORD $DOCKER_REGISTRY_URL;
     docker images;
     docker build -t $DOCKER_TAG .;
