this shouldn't work

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ os: "linux"
 before_install:
   - pip install .
 
+hello:
+  blasdf
+
 script:
 - if [ $TRAVIS_BRANCH == "master" ]; then
     docker login -u $DOCKER_REGISTRY_USERNAME -p $DOCKER_REGISTRY_PASSWORD $DOCKER_REGISTRY_URL;
