--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ script:
     docker images;
     docker build -t $DOCKER_REGISTRY_USERNAME/$DOCKER_TAG .;
     docker images;
-    docker push hub.docker.com/$DOCKER_REGISTRY_USERNAME/$DOCKER_TAG;
+    docker push $DOCKER_REGISTRY_USERNAME/$DOCKER_TAG;
     docker images;
   fi
