--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,24 @@ dist: trusty
 language: python
 
 python: 3.6
-os: "linux"
+os:
+- "linux"
+- "osx"
 
 before_install:
-  - pip install .
+  uname -a
+  #- pip install .
+
+after_install:
+  - uname -a
 
 script:
-- if [ $TRAVIS_BRANCH == "master" ]; then
-    docker login -u $DOCKER_REGISTRY_USERNAME -p $DOCKER_REGISTRY_PASSWORD $DOCKER_REGISTRY_URL;
-    docker images;
-    docker build -t $DOCKER_REGISTRY_USERNAME/$DOCKER_TAG .;
-    docker images;
-    docker push $DOCKER_REGISTRY_USERNAME/$DOCKER_TAG;
-    docker images;
-  fi
+  - uname -a
+#- if [ $TRAVIS_BRANCH == "master" ]; then
+    #docker login -u $DOCKER_REGISTRY_USERNAME -p $DOCKER_REGISTRY_PASSWORD $DOCKER_REGISTRY_URL;
+    #docker images;
+    #docker build -t $DOCKER_REGISTRY_USERNAME/$DOCKER_TAG .;
+    #docker images;
+    #docker push $DOCKER_REGISTRY_USERNAME/$DOCKER_TAG;
+    #docker images;
+  #fi
