--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_install:
 after_install:
   - uname -a
 
+something blah
+
 script:
   - uname -a
 #- if [ $TRAVIS_BRANCH == "master" ]; then
