after_success docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ before_install:
 
 script:
   - tox
+
+after_success:
+  - curl -H "Content-Type: application/json" --data '{"source_type": "Branch", "source_name": "master"}' -X POST "$DOCKER_HUB_TRIGGER_URL"
