--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ python:
 before_install:
   - pip install .
 
+addons:
+  apt:
+    packages:
+    - nmap
+
 script:
   - tox
-
-notifications:
-  webhooks: http://requestbin.fullcontact.com/1h1yzk51
