--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ python:
 
 before_install:
   - apt-cache madison docker-ce
-  - sudo apt-get install docker-ce=17.12.0~ce-0~debian
+  - sudo apt-get install docker-ce=17.12.0~ce-0~ubuntu
   - pip install .
 
 script:
+  - docker version
   - tox
