--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,19 @@ sudo: required
 
 python:
 - "2.7"
-- "3.6"
+- "3.6.3"
 
 before_install:
-  - apt-cache madison docker-ce
-  - sudo apt-get install docker-ce=17.12.0~ce-0~ubuntu
+  - sudo pip install --upgrade awscli
+  - which aws
+  - pip install --upgrade --user awscli
+  - which aws
+  - echo $PATH
+  # - apt-cache madison docker-ce
+  # - sudo apt-get install docker-ce=17.12.0~ce-0~ubuntu
   - pip install .
 
 script:
+  - tox --version
   - docker version
   - tox
