--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,9 @@
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
 
+[tox]
+envlist = py27, py36
+
 [testenv]
 commands =
     A: {envpython} setup.py test
