--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 before_install:
   # - apt-cache madison docker-ce
   # - sudo apt-get install docker-ce=17.12.0~ce-0~ubuntu
+  - docker pull ruby:2.3.5
   - docker pull ubuntu
   - docker run -ti ubuntu echo hello world
   - pip install .
