--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,7 @@ python:
 - "3.6"
 
 before_install:
-  # - apt-cache madison docker-ce
-  # - sudo apt-get install docker-ce=17.12.0~ce-0~ubuntu
-  - docker pull ruby:2.3.5
-  - docker pull ubuntu
-  - docker run -ti ubuntu echo hello world
+  - ls -la /home
   - pip install .
 
 script:
