--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: bash
 
 sudo: required
 
-dist: trusty
+# dist: trusty
 
 services:
   - docker
@@ -14,6 +14,19 @@ services:
 #before_install:
   #- ls -la /home
   #- pip install .
+
+env:
+global:
+- DOCKER_COMPOSE_VERSION=1.22.0
+- IMAGE_TAG_CI=$TRAVIS_PULL_REQUEST_SHA-ci
+
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - docker version && docker-compose version
+  - cat /etc/sysctl.d/99-travis-disable-ipv6.conf
 
 script:
   - docker ps
