--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,13 @@ global:
 - IMAGE_TAG_CI=$TRAVIS_PULL_REQUEST_SHA-ci
 
 before_install:
-  - sudo rm /usr/local/bin/docker-compose
-  - echo curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-  - cat /usr/local/bin/docker-compose
+  #- sudo rm /usr/local/bin/docker-compose
+  - echo curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose > /tmp/wat
+  - cat /tmp/wat
+  #- curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  #- chmod +x docker-compose
+  #- sudo mv docker-compose /usr/local/bin
+  #- cat /usr/local/bin/docker-compose
   - docker version && docker-compose version
   - cat /etc/sysctl.d/99-travis-disable-ipv6.conf
 
