--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
   - docker version && docker-compose version
   - cat /etc/sysctl.d/99-travis-disable-ipv6.conf
+  - ls -la /etc/sysctl.d
 
 script:
   - docker ps
